--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sharper-image-salon",
   "version": "1.0.0",
   "engines": {
-      "npm": "3.10.x",
-      "node": "6.9.x"
+    "npm": "3.10.x",
+    "node": "6.9.x"
   },
   "description": "",
   "main": "index.js",
@@ -26,6 +26,7 @@
     "cookie-session": "^2.0.0-alpha.2",
     "csurf": "^1.9.0",
     "express": "^4.14.0",
+    "multer": "^1.3.0",
     "nodemailer": "^3.1.8",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
